--- a/src/notes/components/notes.component.html
+++ b/src/notes/components/notes.component.html
@@ -1,4 +1,5 @@
 <div>
+  <button (click)="intilaize()">pobierz karteczki</button>
   <add-button (add)="onAddNote($event)" colour="yellow"></add-button>
   <add-button (add)="onAddNote($event)" colour="red"></add-button>
   <add-button (add)="onAddNote($event)" colour="green"></add-button>
